Version 1.9.9 (September 19, 2010)
----------------------------------
* Sanity check should always be the first thing we do since we probably can't
  write the log-file in case we're not root
+ Automatically disable IPV6_SUPPORT if IPv6 is not detected in the kernel
+ Add support for mixed IPv4/IPv6 when IPV6_SUPPORT=1

Version 1.9.2m (September 17, 2010)
-----------------------------------
! Interface detection didn't work in some shells (eg. Dash). We always need to quote this type of stuff!
! Fixes/tweaks in the install script
! Properly handle nat/mangle table rules for IPv4/IPv6
* In case IPv6 is detected, require that the ip6tables-binary is available to ensure a proper/secure policy
+ Implemented IPv6 detection variable so we don't have to perform a sysctl_key for each check
! Several (regression) fixes + improvements related to the previous IPv6 changes
* Changed default policy for IPv6 when IPv4 mode is used (and vice versa). It now
  eg. will accept IPv6 traffic from the internal interface(s) by default (Debian bug #596170)

Version 1.9.2l (August 26, 2010)
--------------------------------
* Implement sysctl_key() function and use it for IPv6 detection (thanks Lonnie)
! The recent changes caused setting net.ipv4.icmp_echo_ignore_all to fail (thanks Lonnie)
* BusyBox doesn't understand grep -x, so use ^$ instead + dots should be escaped (thanks Lonnie)
* From now on explicitly set all variables for sysctl wildcard variables (like "net.ipv4.conf.*.rp_filter")
  since newer kernels handle those differently now (Thanks to Klemen Mihevc)
+ The "Blocked Host" feature adds the BLOCK_HOSTS_BIDIRECTIONAL option to specify whether hosts are
  blocked both Inbound and Outbound (default) or Inbound only. (Thanks Philip)
* Don't masquerade IPv6/proto 41 (thanks Klemen Mihevc)
* Use unset IFS only for actual rules
* Re-added local IFS in environment
+ Added option to enable/disable antispoofing for internal/dmz nets